# GameDev

./: CMakeLists.txt  main.cpp
include/: Brick.h  Circle.h  Collisions.h  Game.h  GameObject.h  GameObjectFactory.h  GameParameters.h  GameState.h  GameStateMachine.h  Grid.h  HorizontalMoving.h  IMovable.h  IShape.h  InputHandler.h  LoaderParams.h  MenuState.h  NonMoving.h  PlayState.h  RGBColor.h  Rectangle.h  RectangleGrid.h  SDLGameObject.h  TextureManager.h  UtilityStructs.h  Vector2D.h  Window.h
src/: Brick.cpp  Circle.cpp  Collisions.cpp  Game.cpp  GameObjectFactory.cpp  GameStateMachine.cpp  HorizontalMoving.cpp  IMovable.cpp  IShape.cpp  InputHandler.cpp  MenuState.cpp  PlayState.cpp  Rectangle.cpp  RectangleGrid.cpp  RectangleGrid.h  SDLGameObject.cpp  TextureManager.cpp  Vector2D.cpp
